--- a/srcs/.env
+++ b/srcs/.env
@@ -7,6 +7,7 @@ DB_USER=wpuser
 DB_PASS=wppass
 WPADUSER=wpaduser
 WPADPASS=wpadminpass
+WPUSER1=wpuser1
 WPUSER1PASS=wpuserpass
 FTP_USR=ftpuser
 FTP_PWD=ftppass
