--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: '3'
 
 services:
   # Nginx service
@@ -21,11 +21,9 @@ services:
       - inception
     # Mount local directories as volumes in the container
     volumes:
-      - ./requirements/nginx/conf/:/etc/nginx/http.d/
-      - ./requirements/nginx/tools:/etc/nginx/ssl/
       - wp-volume:/var/www/
     # Always restart the container if it stops
-    restart: always
+    restart: on-failure
 
   # MariaDB service
   mariadb:
@@ -42,16 +40,13 @@ services:
         DB_ROOT: ${DB_ROOT}
     # Set a container name
     container_name: mariadb
-    # Publish port 3306 on the host to port 3306 in the container
-    ports:
-      - "3306:3306"
     # Attach to the inception network
     networks:
       - inception
     volumes:
       - db-volume:/var/lib/mysql
     # Always restart the container if it stops
-    restart: always
+    restart: on-failure
 
   # WordPress service
   wordpress:
@@ -67,6 +62,9 @@ services:
         DB_NAME: ${DB_NAME}
         DB_USER: ${DB_USER}
         DB_PASS: ${DB_PASS}
+        DOMAIN_NAME: ${DOMAIN_NAME}
+        WPADUSER: ${WPADUSER}
+        WPUSER1: ${WPUSER1}
         WPADPASS: ${WPADPASS}
         WPUSER1PASS: ${WPUSER1PASS}
     # Set a container name
@@ -74,10 +72,8 @@ services:
     # Depend on the MariaDB service being up and running
     depends_on:
       - mariadb
-    ports:
-      - "9000:80"
     # Always restart the container if it stops
-    restart: always
+    restart: on-failure
     # Attach to the inception network
     networks:
       - inception
@@ -95,7 +91,7 @@ services:
       - "6379:6379"
     networks:
       - inception
-    restart: always
+    restart: on-failure
 
   vsftpd:
     image: vsftpd
@@ -112,7 +108,7 @@ services:
       - wp-volume:/var/www/
     networks:
      - inception
-    restart: always
+    restart: on-failure
 
   adminer:
     image: adminer
@@ -126,7 +122,7 @@ services:
       - "8080:8080"
     networks:
      - inception
-    restart: always
+    restart: on-failure
 
   website:
     image: website
@@ -136,7 +132,22 @@ services:
     container_name: website
     ports:
       - "80:80"
-    restart: always
+    networks:
+     - inception
+    restart: on-failure
+
+  portainer:
+    image: portainer/portainer-ce:2.9.3
+    container_name: portainer
+    ports:
+      - '8000:8000'
+      - '9443:9443'
+    networks:
+     - inception
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    restart: on-failure
 
 # Define Docker volumes
 volumes:
@@ -155,6 +166,8 @@ volumes:
       o: bind
       type: none
       device: /home/${USER}/data/mariadb
+
+  portainer_data:  # Added volume for Portainer data persistence
 
 # Define Docker networks
 networks:
