--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,6 @@
 DOMAIN_NAME=cegbulef.42.fr
-CERT_=./requirements/tools/cegbulef.42.fr
-KEY_=./requirements/tools/cegbulef.42.fr
+CERT_=./etc/nginx/ssl/cegbulef.42.fr.crt
+KEY_=./etc/nginx/ssl/cegbulef.42.fr.key
 DB_NAME=wordpress
 DB_ROOT=rootpass
 DB_USER=wpuser
